--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <label for = "psw">password:</label>
     <input id="psw" name="psw" type = "password">
     <br>
+    <input id="pt" name="pt" type="file">
+    <br>
     <button type ="submit">submit</button>
   </form>
 </body>
