--- a/show.html
+++ b/show.html
@@ -12,6 +12,7 @@
   <p id="name"></p>
   <p id="psw"></p>
   <img id="pt" src="">
+  <!-- Bro how boring you are to look into this page -->
   <script src="script.js"></script>
 </body>
 
